--- a/Assets/CSS/css.css
+++ b/Assets/CSS/css.css
@@ -1,3 +1,30 @@
+.wrapper {
+background: linear-gradient(to top right,#779E7E,#3E90C0);
+background-repeat: no-repeat;
+background-size: cover;
+margin-bottom: 0;
+height: 100vh;
+width: 100%
+    
+}
+
+#logo-home {
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 175px;  
+}
+
+#home-btn {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-color:#364739;
+    border-color: white;
+    margin-top: 100px; 
+}
+
 header {
    background: blue;
    height: 60px;
@@ -47,11 +74,12 @@ header {
 }
 
 #footer {
-    background-color: blue;
+    background-color: #364739;
     height: 50px;
     color: white;
     text-align: center;
     padding-top: 15px;
+    margin-top: 0;
 
 }
 
