--- a/Assets/CSS/css.css
+++ b/Assets/CSS/css.css
@@ -1,3 +1,7 @@
+html{
+    height: 100%;
+}
+
 .wrapper {
 background: linear-gradient(to top right,#779E7E,#3E90C0);
 background-repeat: no-repeat;
@@ -12,8 +16,10 @@ body {
 background: linear-gradient(to top right,#779E7E,#3E90C0);
 background-repeat: no-repeat;
 background-size: cover;
+position: relative;
 margin-bottom: 0;
-height: 100vh;
+min-height: 100%;
+padding-bottom: 100px;
 width: 100%
 
 }
@@ -114,8 +120,7 @@ header {
    height: 30px;
     background-color: #779E7E;
     margin-top: 15px;
-    margin-right: 30px;
-    
+    margin-right: 30px;    
 }
 
 #logo-header {
@@ -126,6 +131,7 @@ header {
 
 #footer {
     background-color: #1C4353;
+    position: absolute;
     height: 40px;
     color: white;
     text-align: center;
@@ -404,4 +410,8 @@ text-transform: initial;
 width:20px;
 margin-bottom: -75px;
 margin-left: 5px;
+}
+
+#panels-view{
+    
 }
