--- a/Assets/CSS/css.css
+++ b/Assets/CSS/css.css
@@ -49,7 +49,8 @@ header {
 }
 .jumbotron, #weather {
     height: 100px;
-    background-color: rgb(196, 185, 93);
+    background-color:transparent;
+    /* opacity: 0.5; */
 }
 .jumbotron {
     height: 170px;
@@ -58,8 +59,10 @@ header {
  #home-jumbo {
    
     height: 200px;
-  background-color: #779E7E;
-   
+    background-color:transparent;
+
+  /* background-color: #779E7E;
+    */
 }
 
 #cancel-btn {
@@ -362,7 +365,7 @@ padding-left: 5px;
 
 #date {
 margin-top: 7px;
-background-color: white;
+/* background-color: white; */
 }
 
  .panel-title {
